devops/k8s/template/client/7.client-service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: %NAMESPACE%
  name: %CI_PROJECT_NAME%-client-service
spec:
  selector:
    pod: %CI_PROJECT_NAME%-client-container
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
